# real-time-stt

./: .gitignore  .prettierrc.toml  README.md  bun.lockb  package.json  tailwind.config.ts
app/: page.tsx
app/stt/: page.tsx
app/stt-history/: page.tsx
components/: STTHistory.tsx  STTRecorder.tsx
components/ui/: typing-animation.tsx
py-stt/: .gitignore  pyproject.toml
py-stt/src/py_stt/: __init__.py  config.toml  config_manager.py
py-stt/src/py_stt/vad/: __init__.py  show.py  worker.py
store/: stt.ts
