[project]
name = "py-stt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Sungdon Kim", email = "sehandev@gmail.com" }]
dependencies = [
    "pyaudio>=0.2.14",
    "setuptools-rust>=1.10.2",
    "numba==0.55.2",
    "numpy>=1.22.4",
    "torch>=2.4.1",
    "lightning-whisper-mlx>=0.0.10",
    "toml>=0.10.2",
    "mlx-lm>=0.19.0",
    "pika>=1.3.2",
    "webrtcvad>=2.0.10",
    "noisereduce>=3.0.2",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = { call = "src.py_stt:main" }
vad1.cmd = "/opt/homebrew/opt/rabbitmq/sbin/rabbitmq-server"
vad1.env = { CONF_ENV_FILE = "/opt/homebrew/etc/rabbitmq/rabbitmq-env.conf" }
vad2 = "src/py_stt/vad/worker.py"
vad3 = "src/py_stt/vad/show.py"
vad4 = "src/py_stt/vad/__init__.py"
